[gd_scene load_steps=5 format=3 uid="uid://dtq4er5yfhfa2"]

[ext_resource type="Script" path="res://Singletons/LoginScreen.gd" id="1_i2gqg"]
[ext_resource type="Script" path="res://GUI.gd" id="1_rnw2j"]
[ext_resource type="Texture2D" uid="uid://butt10n4ixka7" path="res://pngimg.com - buttons_PNG128.png" id="2_xg0wq"]
[ext_resource type="PackedScene" uid="uid://dxl4ty8e07jop" path="res://PlayerStats.tscn" id="3_1s7i0"]

[node name="GUI" type="Node2D"]
script = ExtResource("1_rnw2j")

[node name="LoginScreen" type="Control" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 1153.0
offset_bottom = 649.0
script = ExtResource("1_i2gqg")

[node name="Background" type="NinePatchRect" parent="LoginScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoginScreen" type="VBoxContainer" parent="LoginScreen/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 45.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="LoginScreen/Background/LoginScreen"]
layout_mode = 2
text = "Login
"

[node name="Username Title" type="Label" parent="LoginScreen/Background/LoginScreen"]
layout_mode = 2
text = "Username"

[node name="Username" type="LineEdit" parent="LoginScreen/Background/LoginScreen"]
layout_mode = 2

[node name="Password Title" type="Label" parent="LoginScreen/Background/LoginScreen"]
layout_mode = 2
text = "Password"

[node name="Password" type="LineEdit" parent="LoginScreen/Background/LoginScreen"]
layout_mode = 2
secret = true

[node name="LoginButton" type="TextureButton" parent="LoginScreen/Background/LoginScreen"]
custom_minimum_size = Vector2(220, 55)
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("2_xg0wq")
texture_pressed = ExtResource("2_xg0wq")
texture_hover = ExtResource("2_xg0wq")
texture_disabled = ExtResource("2_xg0wq")
texture_focused = ExtResource("2_xg0wq")
ignore_texture_size = true
stretch_mode = 0

[node name="Login" type="Label" parent="LoginScreen/Background/LoginScreen/LoginButton"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Login"
horizontal_alignment = 1

[node name="CreateAccountButton" type="TextureButton" parent="LoginScreen/Background/LoginScreen"]
custom_minimum_size = Vector2(220, 55)
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("2_xg0wq")
texture_pressed = ExtResource("2_xg0wq")
texture_hover = ExtResource("2_xg0wq")
texture_disabled = ExtResource("2_xg0wq")
texture_focused = ExtResource("2_xg0wq")
ignore_texture_size = true
stretch_mode = 0

[node name="CreateAccount" type="Label" parent="LoginScreen/Background/LoginScreen/CreateAccountButton"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Create Account"
horizontal_alignment = 1

[node name="CreateAccount" type="VBoxContainer" parent="LoginScreen/Background"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 45.0
offset_right = 220.0
offset_bottom = 372.0
grow_horizontal = 2
grow_vertical = 2

[node name="Create Account Title" type="Label" parent="LoginScreen/Background/CreateAccount"]
layout_mode = 2
text = "Login
"

[node name="Email Address Title" type="Label" parent="LoginScreen/Background/CreateAccount"]
layout_mode = 2
text = "Email Address
"

[node name="Emailaddress" type="LineEdit" parent="LoginScreen/Background/CreateAccount"]
layout_mode = 2

[node name="Password Title" type="Label" parent="LoginScreen/Background/CreateAccount"]
layout_mode = 2
text = "Password"

[node name="Password" type="LineEdit" parent="LoginScreen/Background/CreateAccount"]
layout_mode = 2
secret = true

[node name="Confirm Password Title" type="Label" parent="LoginScreen/Background/CreateAccount"]
layout_mode = 2
text = "Confirm Password"

[node name="Confirmpassword" type="LineEdit" parent="LoginScreen/Background/CreateAccount"]
layout_mode = 2
secret = true

[node name="ConfirmButton" type="TextureButton" parent="LoginScreen/Background/CreateAccount"]
custom_minimum_size = Vector2(220, 55)
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("2_xg0wq")
texture_pressed = ExtResource("2_xg0wq")
texture_hover = ExtResource("2_xg0wq")
texture_disabled = ExtResource("2_xg0wq")
texture_focused = ExtResource("2_xg0wq")
ignore_texture_size = true
stretch_mode = 0

[node name="Confirm" type="Label" parent="LoginScreen/Background/CreateAccount/ConfirmButton"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Confirm"
horizontal_alignment = 1

[node name="BackButton" type="TextureButton" parent="LoginScreen/Background/CreateAccount"]
custom_minimum_size = Vector2(220, 55)
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("2_xg0wq")
texture_pressed = ExtResource("2_xg0wq")
texture_hover = ExtResource("2_xg0wq")
texture_disabled = ExtResource("2_xg0wq")
texture_focused = ExtResource("2_xg0wq")
ignore_texture_size = true
stretch_mode = 0

[node name="Back" type="Label" parent="LoginScreen/Background/CreateAccount/BackButton"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Back
"
horizontal_alignment = 1

[node name="PlayerStats" parent="." instance=ExtResource("3_1s7i0")]
offset_left = 100.0
offset_top = 300.0
offset_right = 100.0
offset_bottom = 300.0

[connection signal="pressed" from="LoginScreen/Background/LoginScreen/LoginButton" to="LoginScreen" method="_on_login_button_pressed"]
[connection signal="pressed" from="LoginScreen/Background/LoginScreen/CreateAccountButton" to="." method="_on_create_account_button_pressed"]
[connection signal="pressed" from="LoginScreen/Background/CreateAccount/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="visibility_changed" from="PlayerStats" to="PlayerStats" method="_on_visibility_changed"]
